Fix: borrowing book by first in queue after it is returned